--- a/src/package.json
+++ b/src/package.json
@@ -32,7 +32,14 @@
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-avatar": "^1.0.4",
-    "react-day-picker": "^8.10.0"
+    "react-day-picker": "^8.10.0",
+    "vaul": "^1.1.2",
+    "react-hook-form": "^7.55.0",
+    "input-otp": "^1.4.2",
+    "recharts": "^2.15.2",
+    "react-resizable-panels": "^2.1.7",
+    "cmdk": "^1.1.1",
+    "embla-carousel-react": "^8.6.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.1",
